--- a/lab-react-ironnutrition-master/src/components/AddFoodForm.css
+++ b/lab-react-ironnutrition-master/src/components/AddFoodForm.css
@@ -11,7 +11,8 @@
     border-radius: .2rem;
 }
 
-#addFoodForm button {
+
+#createEntryButton {
     margin: 1rem auto;
-    width: 7rem;
+    width: 8rem;
 }
