--- a/refreshing/views/404.ejs
+++ b/refreshing/views/404.ejs
@@ -7,20 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/main.css">
 
-    <title>Page not found</title>
+    <title>
+        <%= pageTitle %>
+    </title>
 
 </head>
 <header class="main-header">
     <nav class="main-header__nav">
         <ul class="main-header__item-list">
-            <li class='main-header__item'><a class="active" href="/add-product">Shop</a></li>
-            <li class="main-header__item"><a href=>Add Product</a></li>
+            <li class='main-header__item'><a class="active" href="/">Shop</a></li>
+            <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
         </ul>
     </nav>
 </header>
 
 <body>
-    <h1>Page not found!</h1>
+    <h1>
+        <%= pageTitle %>
+    </h1>
 </body>
 
 </html>
