--- a/refreshing/views/shop.ejs
+++ b/refreshing/views/shop.ejs
@@ -16,14 +16,18 @@
     <header class="main-header">
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
-                <li class='main-header__item'><a class="active" href="/admin/add-product">Shop</a></li>
-                <li class="main-header__item"><a href=>Add Product</a></li>
+                <li class='main-header__item'><a class="active" href="/">Shop</a></li>
+                <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>My Productss</h1>
-        <p>List of products</p>
+        <h1>My Products</h1>
+        <%for(let prod of prods) { %>
+            <p>
+                <%= prod.title %>
+            </p>
+            <%}%>
     </main>
 </body>
 
