Refactor conrtrollers and views

--- a/refreshing/views/errors/404.ejs
+++ b/refreshing/views/errors/404.ejs
@@ -3,11 +3,14 @@
     <title>
         <%= pageTitle %>
     </title>
+    <style>
+
+    </style>
     </head>
 
     <body>
-        <!-- <%- include("../includes/navigation.ejs")%> -->
-        <h1>
-            <%= pageTitle %>
-        </h1>
-        <%- include("../includes/end.ejs")%>
+        <%- include("../includes/navigation.ejs")%>
+            <h1>
+                <%= pageTitle %>
+            </h1>
+            <%- include("../includes/end.ejs")%>
