--- a/refreshing/public/css/product.css
+++ b/refreshing/public/css/product.css
@@ -1,84 +1,25 @@
-body {
-    padding: 0;
-    margin: 0;
-    font-family: sans-serif;
-}
-
-main {
-    padding: 1rem;
-}
-
-.main-header {
-    width: 100%;
-    height: 3.5rem;
-    background-color: rgb(255, 187, 0);
-    padding: 0 1.5rem;
-}
-
-.main-header__item-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-.main-header__item {
-    margin: 0 1rem;
-    padding: 0;
-}
-
-.main-header__item a {
-    text-decoration: none;
-    color: black;
-}
-
-.main-header__nav {
-    height: 100%;
-    display: flex;
-    align-items: center;
-}
-
-.main-header__item a:hover,
-.main-header__item a:active,
-.main-header__item a.active {
-    color: blue;
-}
-
-.form-control label,
-.form-control input {
-    display: block;
-    width: 100%
-}
-
-.form-control {
-    margin: 1rem 0;
-}
-
-.form-control input {
-    border: 1px solid rgb(255, 187, 0);
-    font: inherit;
-    border-radius: 2px;
-    border-radius: 3px;
-
-}
-
-button {
-    font: inherit;
-    border: 1px solid black;
-    background: white;
-    color: purple;
-    border-radius: 3px;
-    cursor: pointer;
-}
-
 .product-form {
     width: 20rem;
     max-width: 90%;
     margin: auto;
 }
 
-button:hover,
-button:active {
-    background-color: blue;
-    color: white;
+.product-item {
+    width: 20rem;
+    max-width: 95%;
+}
+
+.product__title {
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+.product__price {
+    text-align: center;
+    color: #4d4d4d;
+    margin-bottom: 0.5rem;
+}
+
+.product__description {
+    text-align: center;
 }
