--- a/refreshing/public/css/main.css
+++ b/refreshing/public/css/main.css
@@ -106,3 +106,12 @@ main {
     background-color: #00695c;
     color: white;
 }
+
+article {
+    width: 25%;
+}
+
+.centered {
+    text-align: center;
+    ;
+}
