--- a/refreshing/views/includes/navigation.ejs
+++ b/refreshing/views/includes/navigation.ejs
@@ -4,8 +4,10 @@
             <li class="main-header__item"><a class="<%= path === '/' ? 'active' : '' %>" href="/">Shop</a></li>
             <li class="main-header__item"><a class="<%= path === '/products' ? 'active' : '' %>"
                     href="/products">Products</a></li>
-            <li class="main-header__item"><a class="<%= path === '/admin/cart' ? 'active' : '' %>"
-                    href="/admin/cart">Cart</a>
+            <li class="main-header__item"><a class="<%= path === '/cart' ? 'active' : '' %>" href="/admin/cart">Cart</a>
+            </li>
+            <li class="main-header__item"><a class="<%= path === '/orders' ? 'active' : '' %>"
+                    href="/admin/cart">Orders</a>
             </li>
             <li class="main-header__item"><a class="<%= path === '/admin/add-product' ? 'active' : '' %>"
                     href="/admin/add-product">Add Product</a></li>
