--- a/refreshing/views/shop/product-list.ejs
+++ b/refreshing/views/shop/product-list.ejs
@@ -30,7 +30,10 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <button class="btn">Add to Cart</button>
+                                    <a href="/products/<%= product.id %>" class='btn'>Details</a>
+
+                                    <%- include("../includes/add-to-cart.ejs", {product: product}) %>
+
                                 </div>
                             </article>
                             <% } %>
