--- a/refreshing/views/admin/products.ejs
+++ b/refreshing/views/admin/products.ejs
@@ -30,11 +30,12 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/admin/edit-product/" class="btn">Edit</a>
+                                    <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
                                     <form action="/admin/delete-product" method="POST">
+                                        <input type="hidden" name="productId" value="<%= product.id %>">
                                         <button type="submit" class="btn">Delete</button>
                                     </form>
-
+                                    <!-- <a href="/admin/delete-product/<%= product.id %>" class="btn">Delete</a> -->
                                 </div>
                             </article>
                             <% } %>
