--- a/refreshing/views/shop/cart.ejs
+++ b/refreshing/views/shop/cart.ejs
@@ -10,4 +10,24 @@
 
     <body>
         <%- include("../includes/navigation.ejs")%>
+            <main>
+                <% if(products.length> 0){%>
+                    <ul>
+                        <% products.forEach(prod=> {%>
+                            <li>
+                                <p>
+                                    <%= prod.productData.title %> (<%= prod.qty %>)
+                                </p>
+                                <form action="/cart-delete-item" method="post">
+                                    <input type="hidden" name='productId' value=<%=prod.productData.id%>>
+                                    <button class='btn' type="submit">Delete</button>
+                                </form>
+                            </li>
+
+                            <%});%>
+                    </ul>
+                    <%} else {%>
+                        <h1>No products are in the cart</h1>
+                        <%}%>
+            </main>
             <%- include("../includes/end.ejs")%>
